--- a/main.ipynb
+++ b/main.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = dt.dataset(df,\"cArAt\")"
+    "picture1 = dt.dataset(df,\"cArAt\")"
    ]
   },
   {
@@ -59,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb7dd12a01704962955299fb756f9b20",
+       "model_id": "d55fd52d34e0465ebb5442988eebc2b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,22 +69,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df2.showScatters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3dc4beed",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a89d1d176c24b9396fd9b933c03067e",
+       "model_id": "ff309acfefee41f7b412cf24d5a64688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +86,34 @@
     }
    ],
    "source": [
-    "df2.showBoxplots(['cut','color','clarity'])"
+    "picture1.showScatters()\n",
+    "\n",
+    "picture1.showBoxplots(['cut','color','clarity'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d474c219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1de6223170a4092b0bb8262680c2a24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Select :', options=('carat', 'depth', 'table', 'price', 'x', 'y', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "picture1.showDensities(by=\"cut\")"
    ]
   }
  ],
